Fix dropdown menu toggle color on dark mode

--- a/assets/css/site/header.css
+++ b/assets/css/site/header.css
@@ -36,6 +36,7 @@
 .menu-item-more .icon {
     width: 24px;
     height: 24px;
+    fill: var(--darker-gray-color);
 }
 
 .menu-item-cta {
